--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Introduction</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic01.jpg" alt="展場圖" /></span>
 								<p class="align-center"><h4>大便，真的如人們所想的那麼骯髒嗎？</h4></p>
 								<p>透過大便展，我們將利用科技帶著您了解到大便對人類文明的貢獻，並體認到大便在我們生活中的不可取代性。</p>
 							</article>
